<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kr.yosee.view.UploadDetailStepFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/iv_step_image"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/nstep"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <TextView
                android:id="@+id/tv_step_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/step"
                android:textColor="#ffcc01"
                android:textSize="25sp"
                />

            <EditText
                android:id="@+id/et_step_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#ffffffff"
                android:gravity="start|end"
                android:hint="@string/please_insert_recipe"
                android:textColor="#000000"
                android:textSize="15sp"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff3d633"
        android:text="@string/next_step"
        android:textColor="#ffffff"
        />

</LinearLayout>
