<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.yosee.view.UploadDetailMaterialFragment"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_frame"
        >
        <ImageView
            android:id="@+id/iv_bg_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            />
        <TextView
            android:id="@+id/tv_mat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            />
        <LinearLayout
            android:id="@+id/container_time_n_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_mat_title"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_frame"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/clock_icon"
                    />
                <EditText
                    android:id="@+id/et_recipe_time"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_frame"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/nman_icon"
                    />
                <EditText
                    android:id="@+id/et_recipe_amount"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/container_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_time_n_amount"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/materials_to_prepare"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_mat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="afterDescendants"
                />
            <ImageView
                android:id="@+id/iv_add_material"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:layout_marginStart="120dp"
                android:src="@drawable/plus_icon1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_material"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/tip"
                />
            <EditText
                android:id="@+id/tip"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/please_insert_tip"
                android:textColorHint="#ffe0e0e0"
                android:textSize="15sp"
                />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
